test/fail/basic_syntax/subscript_out_of_range.lly
#[
IndexError: Subscript index -50 is out of range.
Traceback:
    from subscript_out_of_range.lly:7: in __main__
]#

B"Ā ā Ă ă Ą"[-50]
